# rust-tool-example

./: .gitignore  Cargo.toml  README.md  README_en.md  config.yaml  config.yml
actix-example/: Cargo.toml
actix-example/src/: main.rs
actix-example/src/api/: user_api.rs
actix-web/: README.md
actix-web/src/: main.rs
actix-web/src/api/: admin_api.rs  user_info_api.rs
actix-web/src/logic/: admin_logic.rs  user_info_logic.rs
auxm-demo/: Cargo.toml
axum-demo/: Cargo.toml
axum-example/: Cargo.toml
axum-example/src/: main.rs
axum-example/src/api/: goods_api.rs  mod.rs  user_api.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/config/: config.rs
common/src/util/: assert.rs  jwt.rs  mod.rs  password.rs  thread.rs
docs/: code.md  console.md  dto.md  rbatis.md  router.md
rbatis-example/: Cargo.toml  example.html
rbatis-example/src/: main.rs
rust-tool/: config.json  dto_code.txt  intention.txt
rust-tool/actix/: api.txt  logic.txt
rust-tool/salvo/: api.txt  logic.txt  model.txt
rust-tool/view/: router.txt  view.txt
salvo-example/: Cargo.toml
salvo-example/src/: main.rs
salvo-example/src/api/: file_api.rs
salvo-example/src/logic/: user_info_logic.rs
salvo-example/src/middleware/: auth.rs  mod.rs
salvo-example/src/model/: admin.rs  user_info.rs
salvo-example/src/util/: assert.rs  mod.rs
salvo-web/: Cargo.toml  README.md
salvo-web/src/: main.rs
salvo-web/src/api/: admin_api.rs  file_api.rs  mod.rs  user_info_api.rs
salvo-web/src/logic/: admin_logic.rs  user_info_logic.rs
salvo-web/src/middleware/: auth.rs  error.rs
salvo-web/src/model/: admin.rs  user_info.rs
salvo-web/src/plugin/: auth.rs  config.rs
salvo-web/src/util/: assert.rs  mod.rs  result.rs
view/: .env.development  .env.production  package.json
view/src/components/Table/src/hooks/: useDataSource.ts
view/src/pages/api/: admin.ts  user_info.ts
view/src/pages/modules/default/: admin.ts  empty.ts
view/src/pages/modules/router/: user_info.ts
view/src/pages/view/: AdminPage.vue  EmptyPage.vue  UserInfoPage.vue
view/src/router/routes/: index.ts
view/src/store/modules/: user.ts
view/src/utils/http/axios/: index.ts
