[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 子模块依赖
common = {path = "../common"}

actix-web = "4.9.0" #web框架
# 序列化
serde = { version = "1.0.180", features = ["derive"] } #序列化

